--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GitHub 个人主页</title>
+    <title>克喵のGithub主页</title>
     <link rel="stylesheet" href="/github.min.css">
     <link rel="stylesheet" href="/github-dark.min.css">
     <script src="/highlight.min.js"></script>
@@ -14,29 +14,49 @@
         <div class="profile-section">
             <div class="profile-card">
                 <div class="profile-header">
-                    <img src="https://github.com/identicons/default.png" alt="个人照片" class="profile-img">
+                    <img src="https://cn.cravatar.com/avatar/1F6C8947D35A8186A1647009BA8BC5F2?size=256" alt="Profile Image" class="profile-img">
                     <div class="profile-info">
-                        <h1 class="profile-name">YOUR_NAME</h1>
-                        <div class="profile-login">@YOUR_GITHUB_USERNAME</div>
+                        <h1 class="profile-name">克喵爱吃卤面</h1>
+                        <div class="profile-login">@KeMiao</div>
                     </div>
                 </div>
                 
-                <p>YOUR_BIO</p>
+                <p>愿你看清一切真相后，依旧热爱你的家人和朋友。</p>
                 
                 <div class="social-links">
-                    <a href="YOUR_BLOG_URL" class="social-link" target="_blank">
+                    <a href="https://blog-v3.kemeow.top" class="social-link" target="_blank">
                         <svg t="1736847791705" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="2554" width="200" height="200"><path d="M752 176c17.673 0 32 14.327 32 32v608c0 17.673-14.327 32-32 32H272c-17.673 0-32-14.327-32-32V208c0-17.673 14.327-32 32-32h480z m-480-48c-44.183 0-80 35.817-80 80v608c0 44.183 35.817 80 80 80h480c44.183 0 80-35.817 80-80V208c0-44.183-35.817-80-80-80H272z" p-id="2555"></path><path d="M320 712c0-13.255 10.745-24 24-24h336c13.255 0 24 10.745 24 24s-10.745 24-24 24H344c-13.255 0-24-10.745-24-24zM320 584c0-13.255 10.745-24 24-24h336c13.255 0 24 10.745 24 24s-10.745 24-24 24H344c-13.255 0-24-10.745-24-24zM576 312c0-13.255 10.745-24 24-24h80c13.255 0 24 10.745 24 24s-10.745 24-24 24h-80c-13.255 0-24-10.745-24-24zM576 456c0-13.255 10.745-24 24-24h80c13.255 0 24 10.745 24 24s-10.745 24-24 24h-80c-13.255 0-24-10.745-24-24zM344 288h144c13.255 0 24 10.745 24 24v144c0 13.255-10.745 24-24 24H344c-13.255 0-24-10.745-24-24V312c0-13.255 10.745-24 24-24z m24 144h96v-96h-96v96z" p-id="2556"></path></svg>
                         <span>个人博客</span>
                     </a>
-                    <a href="#" class="social-link" onclick="showWechat(event)">
-                        <svg t="1736847807869" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="3632" width="200" height="200"><path d="M664.250054 368.541681c10.015098 0 19.892049 0.732687 29.67281 1.795902-26.647917-122.810047-159.358451-214.077703-310.826188-214.077703-169.353083 0-308.085774 114.232694-308.085774 259.274068 0 83.708494 46.165436 152.460344 123.281791 205.78483l-30.80868 91.730191 107.688651-53.455469c38.558178 7.53665 69.459978 15.308661 107.924012 15.308661 9.66308 0 19.230993-0.470721 28.752858-1.225921-6.025227-20.36584-9.521864-41.723264-9.521864-63.862493C402.328693 476.632491 517.908058 368.541681 664.250054 368.541681zM498.62897 285.87389c23.200398 0 38.557154 15.120372 38.557154 38.061874 0 22.846334-15.356756 38.156018-38.557154 38.156018-23.107277 0-46.260603-15.309684-46.260603-38.156018C452.368366 300.994262 475.522716 285.87389 498.62897 285.87389zM283.016307 362.090758c-23.107277 0-46.402843-15.309684-46.402843-38.156018 0-22.941502 23.295566-38.061874 46.402843-38.061874 23.081695 0 38.46301 15.120372 38.46301 38.061874C321.479317 346.782098 306.098002 362.090758 283.016307 362.090758zM945.448458 606.151333c0-121.888048-123.258255-221.236753-261.683954-221.236753-146.57838 0-262.015505 99.348706-262.015505 221.236753 0 122.06508 115.437126 221.200938 262.015505 221.200938 30.66644 0 61.617359-7.609305 92.423993-15.262612l84.513836 45.786813-23.178909-76.17082C899.379213 735.776599 945.448458 674.90216 945.448458 606.151333zM598.803483 567.994292c-15.332197 0-30.807656-15.096836-30.807656-30.501688 0-15.190981 15.47546-30.477129 30.807656-30.477129 23.295566 0 38.558178 15.286148 38.558178 30.477129C637.361661 552.897456 622.099049 567.994292 598.803483 567.994292zM768.25071 567.994292c-15.213493 0-30.594809-15.096836-30.594809-30.501688 0-15.190981 15.381315-30.477129 30.594809-30.477129 23.107277 0 38.558178 15.286148 38.558178 30.477129C806.808888 552.897456 791.357987 567.994292 768.25071 567.994292z" p-id="3633"></path></svg>
-                        <span>微信</span>
-                    </a>
-                    <a href="#" class="social-link" onclick="showQQ(event)">
+                    <a href="https://github.com/Kemeow815" class="social-link" onclick="showGithub(event)">
+                        <svg t="1736847742177" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="1534" width="200" height="200">
+                            <path d="M12 2A10 10 0 0 0 2 12c0 4.42 2.87 8.17 6.84 9.5c.5.08.66-.23.66-.5v-1.69c-2.77.6-3.36-1.34-3.36-1.34c-.46-1.16-1.11-1.47-1.11-1.47c-.91-.62.07-.6.07-.6c1 .07 1.53 1.03 1.53 1.03c.87 1.52 2.34 1.07 2.91.83c.09-.65.35-1.09.63-1.34c-2.22-.25-4.55-1.11-4.55-4.92c0-1.11.38-2 1.03-2.71c-.1-.25-.45-1.29.1-2.64c0 0 .84-.27 2.75 1.02c.79-.22 1.65-.33 2.5-.33s1.71.11 2.5.33c1.91-1.29 2.75-1.02 2.75-1.02c.55 1.35.2 2.39.1 2.64c.65.71 1.03 1.6 1.03 2.71c0 3.82-2.34 4.66-4.57 4.91c.36.31.69.92.69 1.85V21c0 .27.16.59.67.5C19.14 20.16 22 16.42 22 12A10 10 0 0 0 12 2"></path>
+                        </svg>
+                        <span>GitHub</span>
+                    </a>                    
+                    <a href="https://qm.qq.com/q/m8FW8Y6TkY" class="social-link" onclick="showQQ(event)">
                         <svg t="1736847742177" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="1534" id="mx_n_1736847742178" width="200" height="200"><path d="M824.8 613.2c-16-51.4-34.4-94.6-62.7-165.3C766.5 262.2 689.3 112 511.5 112 331.7 112 256.2 265.2 261 447.9c-28.4 70.8-46.7 113.7-62.7 165.3-34 109.5-23 154.8-14.6 155.8 18 2.2 70.1-82.4 70.1-82.4 0 49 25.2 112.9 79.8 159-26.4 8.1-85.7 29.9-71.6 53.8 11.4 19.3 196.2 12.3 249.5 6.3 53.3 6 238.1 13 249.5-6.3 14.1-23.8-45.3-45.7-71.6-53.8 54.6-46.2 79.8-110.1 79.8-159 0 0 52.1 84.6 70.1 82.4 8.5-1.1 19.5-46.4-14.5-155.8z" p-id="1535"></path></svg>
                         <span>QQ</span>
                     </a>
-                    <a href="mailto:YOUR_EMAIL" class="social-link">
+                    <a href="https://t.me/KemiaoJun" class="social-link" onclick="showTelegram(event)">
+                        <svg class="icon" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" width="200" height="200">
+                            <path d="M12 0C5.373 0 0 5.373 0 12s5.373 12 12 12 12-5.373 12-12S18.627 0 12 0zm5.894 8.221-1.97 9.28c-.145.658-.537.818-1.084.508l-3-2.21-1.447 1.394c-.16.16-.295.295-.605.295l.213-3.05 5.56-5.02c.242-.213-.054-.334-.373-.12l-6.87 4.33-2.96-.922c-.642-.203-.658-.64.135-.954l11.566-4.45c.537-.193 1.006.127.822.942z" fill="currentColor"/>
+                        </svg>
+                        <span>Telegram</span>
+                    </a>
+                    <a href="https://x.com/kemiaosw" class="social-link" onclick="showTwitter(event)">
+                        <svg class="icon" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" width="200" height="200">
+                            <path d="M18.244 2.25h3.308l-7.227 8.26 8.502 11.24H16.17l-5.214-6.817L4.99 21.75H1.68l7.73-8.835L1.254 2.25H8.08l4.713 6.231zm-1.161 17.52h1.833L7.084 4.126H5.117z" fill="currentColor"/>
+                        </svg>
+                        <span>Twitter</span>
+                    </a>     
+                    <a href="https://music.163.com/#/playlist?id=13681647281" class="social-link" onclick="showNetease(event)">
+                        <svg class="icon" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" width="200" height="200">
+                            <path d="M21 3v12.5a3.5 3.5 0 0 1-3.5 3.5a3.5 3.5 0 0 1-3.5-3.5a3.5 3.5 0 0 1 3.5-3.5c.54 0 1.05.12 1.5.34V6.47L9 8.6v8.9A3.5 3.5 0 0 1 5.5 21A3.5 3.5 0 0 1 2 17.5A3.5 3.5 0 0 1 5.5 14c.54 0 1.05.12 1.5.34V6z"/>
+                        </svg>
+                        <span>网易云</span>
+                    </a>                                   
+                    <a href="mailto:me@kemiaosw.top" class="social-link">
                         <svg height="16" viewBox="0 0 16 16" width="16">
                             <path d="M1.75 2h12.5c.966 0 1.75.784 1.75 1.75v8.5A1.75 1.75 0 0 1 14.25 14H1.75A1.75 1.75 0 0 1 0 12.25v-8.5C0 2.784.784 2 1.75 2ZM1.5 12.251c0 .138.112.25.25.25h12.5a.25.25 0 0 0 .25-.25V5.809L8.38 9.397a.75.75 0 0 1-.76 0L1.5 5.809v6.442Zm13-8.181v-.32a.25.25 0 0 0-.25-.25H1.75a.25.25 0 0 0-.25.25v.32L8 7.88Z"></path>
                         </svg>
@@ -70,9 +90,9 @@
         <div class="container">
             <div class="footer-content">
                 <div class="copyright">
-                    © 2024 YOUR_NAME. All rights reserved.
+                    © 2025 克喵爱吃卤面. All rights reserved.
                 </div>
-                <div class="beian">
+<!--                 <div class="beian">
                     <a href="https://beian.miit.gov.cn/" target="_blank">
                         <img src="https://img.alicdn.com/tfs/TB1..50QpXXXXX7XpXXXXXXXXXX-40-40.png" alt="备案图标">
                         YOUR_ICP_NUMBER
@@ -81,7 +101,7 @@
                 <a href="YOUR_STATUS_PAGE_URL" target="_blank">
                     <img src="YOUR_STATUS_BADGE_URL" alt="状态徽章">
                 </a>
-            </div>
+            </div> -->
         </div>
     </footer>
     <script src="/marked.min.js"></script>
