--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@
 
             <div class="content">
                 <div class="tab-container">
-                    <a href="#" class="tab active" data-tab="overview">概览</a>
-                    <a href="#" class="tab" data-tab="projects">项目库</a>
-                    <a href="#" class="tab" data-tab="stars">Stars</a>
+                    <a href="https://github.com/Kemeow815" class="tab active" data-tab="overview">概览</a>
+                    <a href="https://github.com/Kemeow815?tab=repositories" class="tab" data-tab="projects">项目库</a>
+                    <a href="https://github.com/Kemeow815?tab=stars" class="tab" data-tab="stars">Stars</a>
                 </div>
 
                 <div class="content-area">
